# data-migration-accelerator

./: .gitignore  MAPPING_EXAMPLES.md  Makefile  README.md  REFACTOR_PLAN.md  databricks.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  run_local_benchmark.py  snowflake_objects_snowpark.json  snowflake_test_objects.sql  snowpark.py  tags.yml  test_validation_logging.py  test_validation_update.py
.github/workflows/: databricks-asset-bundle-deploy.yml
databricks_job_executor/: README.md  app.yml  databricks.yml  requirements.txt
databricks_job_executor/streamlit_app/: __init__.py  app.py
ddl_output/evaluation_results/: evaluation_batch_schemas_20251216_165825.json  evaluation_batch_tables_20251216_163330.json  evaluation_batch_tables_20251216_165817.json  evaluation_batch_tables_20251216_165820.json  evaluation_batch_views_20251216_165823.json
docs/: combined_documentation.md
resources/: app.yml  artifacts.yml  jobs.yml  unity_catalog.yml
scripts/: run_translation.sh
sql_glot_concept/: CONCEPT_SUMMARY.md  README.md  demo_script.py  requirements.txt  sqlglot_migration_demo.ipynb
src/artifact_translation_package/: README.md  databricks_job.py  graph_builder.py  main.py  run_file_processor.py
src/migration_accelerator_package/: artifact_readers.py  artifact_validators.py  constants.py  grant_transformation.py  grant_transformer.py  ingestion_validation.py  logging_utils.py  main.py  snowpark.py  snowpark_utils.py
src/migration_report_package/: README.md  graph_builder.py  main.py  report_llm.py
translation_graph/: README.md  databricks_job.py  databricks_job.py.backup  graph_builder.py  main.py  requirements.txt  run_example.py  run_file_processor.py
translation_graph/config/: ddl_config.py
translation_graph/docs/: DATABRICKS.md
translation_graph/nodes/: aggregator.py  comments_translation.py  database_translation.py  evaluation.py  pipes_translation.py  (+15 more)
(+139 files in other folders)
