[tool.poetry]
name = "migration_accelerator_package"
version = "0.0.1"
description = "Reusable python logic for Snowflake - Databricks Migration."
authors = ["Samuel Solarte samuel.solarte@qubika.com"]
packages = [{ include = "migration_accelerator_package", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.31.0"
snowflake-connector-python>=3.0.0
snowflake-snowpark-python>=1.0.0
python-dotenv = ">=1.0.0"
databricks-sdk = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
migration-accelerator = "migration_accelerator_package.main:main"